# 3dgs_services

./: .env.example  .gitignore  README.md  docker-compose.yml  settings.yaml
api/: Dockerfile  main.py  pyproject.toml  settings.py
api/domain/jobs/: entities.py  schemas.py  service.py
api/entrypoints/http/: deps.py
api/entrypoints/http/routers/: jobs.py  uploads.py
api/infrastructure/broker/: base.py  celery_broker.py  factory.py
api/infrastructure/job_store/: base.py  factory.py  redis_store.py
api/infrastructure/storage/: base.py  factory.py  local.py
scripts/: download_models.py
worker/: Dockerfile  logging_config.py  pyproject.toml  settings.py  tmp_process_video.py
worker/entrypoints/consumer/: tasks.py
worker/infrastructure/job_store/: base.py  factory.py  redis_store.py
worker/infrastructure/pipeline/: __init__.py  colmap.py  context.py  depth.py  depth_maps.py  depth_utils.py  dn_splatter.py  extract.py  mask.py  opensplat.py  postprocess.py  preview.py  transforms.py  viewcrafter.py
worker/infrastructure/storage/: base.py  local.py
worker/vendor_dn_splatter/: pyproject.toml
worker/vendor_viewcrafter/: README.md
