[project]
name = "3dgs-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
    "httpx>=0.27",
    "celery[redis]>=5.4",
    "redis[asyncio]>=5.0",
    "pydantic>=2.7",
    "pydantic-settings[yaml]>=2.3",
]
