[project]
name = "3dgs-worker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "celery[redis]>=5.4",
    "redis>=5.0",
    "pydantic>=2.7",
    "pydantic-settings[yaml]>=2.3",
    "onnxruntime-gpu>=1.18",
    "opencv-python-headless>=4.9",
]
# Base image (ghcr.io/nerfstudio-project/nerfstudio) ships: numpy, torch, gsplat,
# nerfstudio (splatfacto + ns-train/ns-export), COLMAP, GLOMAP, ffmpeg.
# dn-splatter installed separately in Dockerfile (git pip).
# onnxruntime-gpu: YOLOv8n person masking + Depth Anything V2 depth estimation.

[tool.setuptools]
packages = []  # worker is a scripts app, not an installable package
